fix header: add gap, update create-post button

--- a/src/layout/header/ui/styles.module.scss
+++ b/src/layout/header/ui/styles.module.scss
@@ -1,6 +1,7 @@
 .head {
   display: flex;
   flex-direction: row;
+  gap: 16px;
 }
 
 .logo {
